# nbswave

./: .gitignore  LICENSE  README.md  nbs_to_audio.py  pydub_mixer.py  pyproject.toml  pyrightconfig.json  test.nbs  test.py
nbsaudio/: audio.py  main.py  nbs.py  song.py
nbswave/: audio.py  main.py  nbs.py
