[tool.poetry]
name = "nbswave"
version = "0.4.0"
description = "An utility to render note block songs to a variety of audio formats"
authors = ["Bentroen <bemcdc@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Bentroen/nbswave"
repository = "https://github.com/Bentroen/nbswave"
keywords = ["minecraft", "note-block-studio", "noteblock", "nbs", "audio"]
include = [
     "LICENSE",
]
packages = [
     { include = "nbswave" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
pynbs = "^1.1.0"
numpy = "^1.23.1"
soundfile = "^0.12.1"
samplerate = {git = "https://github.com/tuxu/python-samplerate.git", rev = "refs/pull/14/merge"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
